save local with json, reduced number of planned entries to one

--- a/.gitignore
+++ b/.gitignore
@@ -21,11 +21,13 @@ yarn-error.log
 *.sublime-workspace
 
 # Visual Studio Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+.vscode/
+# git rid of top line and uncomment below if you want to keep your vscode workspace settings
+# .vscode/*
+# !.vscode/settings.json
+# !.vscode/tasks.json
+# !.vscode/launch.json
+# !.vscode/extensions.json
 .history/*
 
 # Miscellaneous
