--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "pto-planner",
   "version": "0.0.0",
+  "engines": {
+    "node": ">=18.18.0",
+    "npm": ">=9.8.0"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
