--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pto-planner",
   "version": "0.0.0",
   "engines": {
-    "node": "20.11.1",
+    "node": "20.x",
     "npm": ">=9.8.0"
   },
   "scripts": {
